[gd_scene load_steps=5 format=3 uid="uid://cwjy4yaxpsu7i"]

[ext_resource type="Script" path="res://Scripts/config.gd" id="1_gvcx6"]
[ext_resource type="Texture2D" uid="uid://dmbwxm0gim8uc" path="res://Recursos/Tilemaps/59894.png" id="1_p1e6r"]
[ext_resource type="Texture2D" uid="uid://cdqtgjttec2b3" path="res://Recursos/Tilemaps/598942.png" id="2_cqqxq"]
[ext_resource type="Texture2D" uid="uid://nvq3j6kv7vjk" path="res://Recursos/Tilemaps/SPRITES.webp" id="5_vf7e5"]

[node name="Config" type="Node2D"]
script = ExtResource("1_gvcx6")

[node name="fondo" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(160.005, 240)
scale = Vector2(2.238, 1.882)
texture = ExtResource("1_p1e6r")
region_enabled = true
region_rect = Rect2(0.100723, -0.0463715, 143.753, 255.855)

[node name="Terra" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 2
position = Vector2(2245.6, 439.529)
scale = Vector2(1.5, 1.563)
texture = ExtResource("2_cqqxq")
region_enabled = true
region_rect = Rect2(-68.035, -0.237, 3000, 55.886)

[node name="Poblacio" type="Label" parent="."]
offset_left = 62.0
offset_top = 30.0
offset_right = 152.0
offset_bottom = 54.0
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "POBLACIÓ:"

[node name="Num" type="TextEdit" parent="Poblacio"]
layout_mode = 0
offset_left = 136.0
offset_top = -8.0
offset_right = 219.0
offset_bottom = 32.0

[node name="Generacions" type="Label" parent="."]
offset_left = 46.0
offset_top = 126.0
offset_right = 166.0
offset_bottom = 150.0
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "GENERACIONS:"

[node name="Num" type="TextEdit" parent="Generacions"]
layout_mode = 0
offset_left = 152.0
offset_top = -8.0
offset_right = 235.0
offset_bottom = 32.0

[node name="Puntuacio_max" type="Label" parent="."]
offset_left = 22.0
offset_top = 78.0
offset_right = 190.0
offset_bottom = 102.0
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "PUNTUACIÓ MÀXIMA:"

[node name="Num" type="TextEdit" parent="Puntuacio_max"]
layout_mode = 0
offset_left = 176.0
offset_top = -8.0
offset_right = 259.0
offset_bottom = 32.0

[node name="Partides" type="Label" parent="."]
offset_left = 62.0
offset_top = 182.0
offset_right = 150.0
offset_bottom = 206.0
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "PARTIDES:"

[node name="Num" type="TextEdit" parent="Partides"]
layout_mode = 0
offset_left = 136.0
offset_top = -8.0
offset_right = 219.0
offset_bottom = 32.0

[node name="VelJoc" type="Label" parent="."]
offset_left = 58.0
offset_top = 236.0
offset_right = 151.0
offset_bottom = 260.0
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "VELOCITAT:"

[node name="VelocitatJoc" type="TextEdit" parent="VelJoc"]
layout_mode = 0
offset_left = 140.0
offset_top = -8.0
offset_right = 223.0
offset_bottom = 32.0

[node name="OK" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(270, 367)
scale = Vector2(2.21875, 2.21875)
texture = ExtResource("5_vf7e5")
region_enabled = true
region_rect = Rect2(244.039, 132.688, 42.958, 16.3508)

[node name="OK" type="Button" parent="OK"]
show_behind_parent = true
offset_left = -19.0
offset_top = -7.0
offset_right = 20.0
offset_bottom = 7.0

[node name="Inputs" type="Button" parent="."]
offset_left = 8.0
offset_top = 352.0
offset_right = 100.0
offset_bottom = 383.0
text = "INPUTS"

[node name="Mutacions" type="Button" parent="."]
offset_left = 107.0
offset_top = 352.0
offset_right = 219.0
offset_bottom = 383.0
text = "MUTACIONS"

[node name="XarxaNeuronal" type="Button" parent="."]
offset_left = 35.0
offset_top = 316.0
offset_right = 184.0
offset_bottom = 340.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 11
text = "XARXA NEURONAL"

[node name="Activat" type="CheckButton" parent="XarxaNeuronal"]
layout_mode = 0
offset_left = 178.0
offset_top = -1.0
offset_right = 222.0
offset_bottom = 24.0

[node name="Label" type="Label" parent="."]
offset_left = 36.0
offset_top = 284.0
offset_right = 115.0
offset_bottom = 307.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 11
text = "MONEDES"

[node name="monedes" type="CheckButton" parent="Label"]
layout_mode = 0
offset_left = 61.0
offset_top = -4.0
offset_right = 105.0
offset_bottom = 20.0

[connection signal="pressed" from="OK/OK" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="Inputs" to="." method="_on_inputs_pressed"]
[connection signal="pressed" from="Mutacions" to="." method="_on_mutacions_pressed"]
[connection signal="pressed" from="XarxaNeuronal" to="." method="_on_xarxa_neuronal_pressed"]
[connection signal="pressed" from="Label/monedes" to="." method="_on_monedes_pressed"]
